--- a/custom/addons/zoo_addon/views/zoo_sales.xml
+++ b/custom/addons/zoo_addon/views/zoo_sales.xml
@@ -9,7 +9,18 @@
           <xpath expr="//sheet" position="before">
                 <field name = "sale_move_id" invisible ="1"/>
                 <header>
-                    <button name="saleorder_create" string="Sales" type="object" stats="draft" attrs="{'invisible': [('sale_move_id', '!=', False)]}"></button>
+                    <button name="saleorder_create"
+                            string="Sales"
+                            type="object"
+                            stats="draft"
+                            attrs="{'invisible': [('sale_move_id', '!=', False)]}">
+                    </button>
+                    <button name="purchase_create"
+                            string="Purchase"
+                            type="object"
+                            stats="draft"
+                            attrs="{'invisible': [('purchase_move_id', '!=', False)]}">
+                    </button>
                 </header>
 
           </xpath>
@@ -21,7 +32,7 @@
         <field name="model">zoo.manger</field>
         <field name="inherit_id" ref="zoo_manager.zoo_manger_view_form"/>
         <field name="arch" type="xml">
-          <xpath expr="//field[@name='animal_image']" position="before">
+          <xpath expr="//group" position="before">
                <div class="oe_button_box" name="button_box">
                     <field name = "sale_move_id" invisible ="1"/>
                     <button type="object"
@@ -35,17 +46,6 @@
           </xpath>
         </field>
      </record>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
