--- a/custom/addons/zoo_manager/views/zoo_manger.xml
+++ b/custom/addons/zoo_manager/views/zoo_manger.xml
@@ -14,21 +14,14 @@
         <field name="name">Zoo Manager Form</field>
         <field name="model">zoo.manger</field>
         <field name="arch" type="xml">
-            <form string="Patients">
+            <form>
                 <sheet>
-                    <field name="animal_image" widget="image" class="oe_avatar"/>
-                    <div class="main_title">
-                       <h1>
-                           <field name="name" />
-                       </h1>
-                    </div>
                     <group>
+                        <field name="name"/>
                         <field name="partner_id"/>
-                        <field name="animal_type_id" />
-                        <field name="animal_age" />
-                        <field name="animal_year" />
+                        <field name="animal_type_id"/>
                         <field name="time_for_food"/>
-                        <field name="food_ids" />
+                        <field name="food_ids"/>
                     </group>
                 </sheet>
             </form>
@@ -42,8 +35,6 @@
             <tree>
                 <field name="name"/>
                 <field name="time_for_food" widget="remaining_days"/>
-                <field name="animal_age"/>
-                <field name="animal_year" invisible="1"/>
                 <field name="food_ids"/>
                 <field name="partner_id"/>
             </tree>
@@ -133,7 +124,7 @@
     <record id='zoo_manger_animal_type_action' model='ir.actions.act_window'>
         <field name="name">Zoo Animal Type</field>
         <field name="res_model">zoo.animal_type</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
     </record>
 
 
@@ -143,13 +134,23 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <field name="animal_image" widget="image" class="oe_avatar"/>
+                    <div class="main_title">
+                       <h1>
+                           <field name="name"/>
+                       </h1>
+                    </div>
                     <group>
-                        <field name="name"  string='Animal Type'/>
+                        <field name="animal_type"/>
+                        <field name="animal_year"/>
+                        <field name="animal_sex" widget="radio"/>
+                        <field name="animal_tag" widget="html"/>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
+
 
 
     <record id='zoo_animal_type_view_tree' model='ir.ui.view'>
@@ -161,6 +162,49 @@
             </tree>
          </field>
     </record>
+
+
+
+    <record id="zoo_animal_type_kanban_view" model="ir.ui.view">
+        <field name="name">Zoo Animal Type Kanban</field>
+        <field name="model">zoo.animal_type</field>
+        <field name="arch" type="xml">
+            <kanban>
+                <field name="id"/>
+                <field name="animal_image"/>
+                <field name="name"/>
+                <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_global_click">
+                                <div class="o_kanban_image">
+                                    <img alt="Avatar" t-att-src="kanban_image('zoo.animal_type', 'image_medium', record.id.raw_value)"/>
+                                </div>
+                                <div class="oe_kanban_details">
+                                    <strong class="o_kanban_record_title">
+                                    <field name="name"/>
+                                    </strong>
+                                    <field name="animal_year"/>
+                                </div>
+                            </div>
+                        </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -198,7 +242,6 @@
         <field name="name">Zoo Food Quantity Tree</field>
         <field name="model">zoo.food_quantity</field>
         <field name="arch" type="xml">
-<!--            <tree editable="bottom">-->
             <tree editable="bottom">
                 <field name="animal_type_id" invisible = "1"/>
                 <field name="food_table_id" />
@@ -269,6 +312,7 @@
               action="zoo_manger_food_quantity_action"
               name="Zoo Food Quantity"
               sequence="4" parent="zoo_configuration"/>
+
 
 
 
